2006-01-05  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/javax/swing/text/GapContent/PositionTest.java
	(testComplex): Added more test cases.

2006-01-05  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure6.java: New test.

2006-01-05  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/util/regex/Pattern/matches.java: Added some
	test cases.

2006-01-04  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure4.java: New test.
	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure5.java: New test.

2006-01-04  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/java/io/ObjectInputStream/security.java: New test.
	* gnu/testlet/java/io/ObjectOutputStream/security.java: Likewise.

2006-01-04  Gary Benson <gbenson@redhat.com>

	* gnu/testlet/TestSecurityManager2.java (TestSecurityManager2):
	Preload some classes to avoid infinite loops when in force.

2006-01-03  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/String/getBytes13.java (dumpArray): New
	method.
	(test1Encoding): Use it.

2006-01-03  Lillian Angel  <langel@redhat.com>
	
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getAcceleratorForeground.java:
	(test): Fixed color.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getAcceleratorSelectedForeground.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getBlack.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControl.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlDarkShadow.java:
	(test): Fixed to set the current theme, otherwise the color returned is null.